# lr-rag

./: .env  cli.py  pyproject.toml
src/config/: settings.py
src/ingestion/: chunker.py  embedder.py  loader.py  upsert.py
src/lr_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/retrieval/: answer.py  query_embedder.py  search.py
src/services/: ollama.py  qdrant.py
